[BUGFIX] Navbar icons on mobile, large and xl screens display fixed

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -4,7 +4,7 @@ body {
 
 .hero-image {
     margin-top: 12%;
-    background: url("/media/p-r-u-hero-image.jpg") no-repeat center center;
+    background: url("/media/p-r-u-hero-image2.jpg") no-repeat center center;
     background-size: cover;
     width: 70vw;
     height: 80vh;
@@ -137,4 +137,8 @@ a.category-badge > span.badge:hover {
         height:40vh;
     }
     
+    .shop-btn {
+        margin-left: 6%;
+        min-width: 160px;
+    }
 }
